Adjusted the width of  the stopwatch display so it doesn't break on mobile view

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ button:hover {
 }
 
 div {
-  font-size: 4em;
+  font-size: 3.5em;
   text-align: center;
   margin: 50px 0;
   color: white;
